<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_ios_new_24"
        app:navigationIconTint="?colorOnPrimary"
        app:title="@string/toolbar_title_settings"
        app:titleTextColor="?colorOnPrimary"
        app:titleCentered="true"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/action_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar_setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        app:cardBackgroundColor="?colorSurfaceContainerHigh"
        style="@style/Widget.Material3.CardView.Filled">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/card_text_language"
                style="@style/TextAppearance.Material3.BodyLarge" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="8dp"
                app:tint="?colorOnSurface"
                android:src="@drawable/baseline_language_24"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/action_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/action_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        style="@style/Widget.Material3.CardView.Filled"
        app:cardBackgroundColor="?colorErrorContainer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/card_text_logout"
                style="@style/TextAppearance.Material3.BodyLarge" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="8dp"
                android:src="@drawable/baseline_logout_24"
                app:tint="?colorOnErrorContainer"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_info_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/action_logout"
        app:layout_constraintStart_toStartOf="@id/action_logout"
        app:layout_constraintEnd_toEndOf="@id/action_logout"
        android:text="@string/language_availability"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:textAlignment="center"
        android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>